fix too narrow on mobile

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -94,3 +94,9 @@ video {
   margin-right: auto;
   display: block;
 }
+
+/* Fix too Narrow on Mobile */
+.col-lg-8 {
+  padding-right: 0px;
+  padding-left: 0px;
+}
